<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="movies_tittle">Movies_Tittle</string>
    <string name="duration">Duration</string>
    <string name="rating">7.5</string>
    <string name="outof10">/ 10</string>
    <string name="genre_based">Genre Based On Movie</string>
    <string name="duration_time">2h 45min</string>
    <string name="synopsis_detail">Synopsis</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor Something something and something, then once upon the time there is monster and evveryone died wow.</string>

    <string-array name="judul">
        <item>Avengers: Infinity War (2018)</item>
        <item>Aquaman (2018)</item>
        <item>Bird Box (2018)</item>
        <item>Bohemian Rhapsody (2018)</item>
        <item>Deadpool 2 (2018)</item>
        <item>How to Train Your Dragon: The Hidden World (2019)</item>
        <item>Glass (2019)</item>
        <item>Mary Poppins Returns (2018)</item>
        <item>Spider-Man: Into the Spider-Verse (2018)</item>
        <item>Venom (2018)</item>
    </string-array>

    <string-array name="genre">
        <item>Action, Adventure, Sci-Fi </item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Horror, Sci-Fi</item>
        <item>Biography, Drama, Music</item>
        <item>Action, Adventure, Comedy</item>
        <item>Animation, Action, Adventure</item>
        <item>Drama, Sci-Fi, Thriller</item>
        <item>Comedy, Family, Fantasy</item>
        <item>Animation, Action, Adventure</item>
        <item>Action, Sci-Fi, Thriller</item>
    </string-array>

    <string-array name="synopsis">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>When a mysterious force decimates the population, only one thing is certain if you see it, you die. The survivors must now avoid coming face to face with an entity that takes the form of their worst fears. Searching for hope and a new beginning, a woman and her children embark on a dangerous journey through the woods and down a river to find the one place that may offer sanctuary. To make it, they\'ll have to cover their eyes from the evil that chases them — and complete the trip blindfolded.</item>
        <item>Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. Freddie defied stereotypes and shattered convention to become one of the most beloved entertainers on the planet. The film traces the meteoric rise of the band through their iconic songs and revolutionary sound. They reach unparalleled success, but in an unexpected turn Freddie, surrounded by darker influences, shuns Queen in pursuit of his solo career. Having suffered greatly without the collaboration of Queen, Freddie manages to reunite with his bandmates just in time for Live Aid. While bravely facing a recent AIDS diagnosis, Freddie leads the band in one of the greatest performances in the history of rock music. Queen cements a legacy that continues to inspire outsiders, dreamers and music lovers to this day.</item>
        <item>Wisecracking mercenary Deadpool meets Russell, an angry teenage mutant who lives at an orphanage. When Russell becomes the target of Cable — a genetically enhanced soldier from the future — Deadpool realizes that he\'ll need some help saving the boy from such a superior enemy. He soon joins forces with Bedlam, Shatterstar, Domino and other powerful mutants to protect young Russell from Cable and his advanced weaponry.</item>
        <item>From DreamWorks Animation comes a surprising tale about growing up, finding the courage to face the unknown…and how nothing can ever train you to let go. What began as an unlikely friendship between an adolescent Viking and a fearsome Night Fury dragon has become an epic adventure spanning their lives.</item>
        <item>Kevin Wendell Crumb and the multiple identities who reside within, and Anya Taylor-Joy as Casey Cooke, the only captive to survive an encounter with The Beast. Following the conclusion of Split, Glass finds Dunn pursuing Crumb’s superhuman figure of The Beast in a series of escalating encounters, while the shadowy presence of Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Decades after her original visit, the magical nanny returns to help the Banks siblings and Michael\'s children through a difficult time in their lives.</item>
        <item>Teen Miles Morales becomes Spider-Man of his reality, crossing his path with five counterparts from another dimensions to stop a threat for all realities.</item>
        <item>Journalist Eddie Brock is trying to take down Carlton Drake, the notorious and brilliant founder of the Life Foundation. While investigating one of Drake\'s experiments, Eddie\'s body merges with the alien Venom — leaving him with superhuman strength and power. Twisted, dark and fueled by rage, Venom tries to control the new and dangerous abilities that Eddie finds so intoxicating.</item>
    </string-array>

    <array name="poster">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="duration">
        <item>2h 40min</item>
        <item>2h 22min</item>
        <item>2h 04min</item>
        <item>2h 14min</item>
        <item>1h 59min</item>
        <item>1h 44min</item>
        <item>2h 09min</item>
        <item>2h 10min</item>
        <item>1h 56min</item>
        <item>1h 52min</item>
    </string-array>

    <string-array name="rating">
        <item>8.5</item>
        <item>7.5</item>
        <item>6.6</item>
        <item>8.0</item>
        <item>7.8</item>
        <item>7.6</item>
        <item>6.7</item>
        <item>6.8</item>
        <item>8.5</item>
        <item>6.7</item>
    </string-array>

</resources>
