<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".DetailMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detailmv"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:adjustViewBounds="true"
                android:background="@drawable/poster_avengerinfinity"
                android:scaleType="fitXY" />
            <TextView
                android:id="@+id/tv_detailtittle"
                style="@style/text_view_custom"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/movies_tittle"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginBottom="50dp"
                android:background="#4D000000"
                android:padding="7dp"
                />
            <TextView
                android:id="@+id/tvdetail_genre"
                style="@style/text_view_custom"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:padding="5dp"
                android:background="#4D000000"
                android:text="@string/genre_based"
                android:layout_gravity="bottom"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:background="@color/background_color"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/stardetailver"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/tvdetail_rating"
                    style="@style/text_view_custom"
                    android:text="@string/rating"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="15dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
                <TextView
                    style="@style/text_view_custom"
                    android:layout_marginStart="5dp"
                    android:text="@string/outof10"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/stopwatch"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/tv_detailduration"
                    style="@style/text_view_custom"
                    android:text="@string/duration_time"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            style="@style/text_view_custom"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/synopsis_detail"
            />
        <TextView
            android:id="@+id/synopsis"
            style="@style/text_view_custom"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="20sp"
            android:textSize="14sp"
            android:textColor="@color/text_color"
            android:text="@string/lorem_ipsum"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</ScrollView>