<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/horizontal_margin"
    android:background="@color/background_color"
    >
        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="185dp"
            android:layout_height="250dp"
            android:background="@drawable/button_bg_rounded"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            >
            <TextView
                android:id="@+id/tv_movies_tittle"
                style="@style/text_view_custom"
                android:textSize="16sp"
                android:text="@string/movies_tittle"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_duration"
                style="@style/text_view_custom"
                android:layout_marginTop="15dp"
                android:text="@string/duration"
                android:textSize="15sp"
                android:textStyle="bold"
                 />
            <TextView
                android:id="@+id/tv_genre"
                android:layout_marginTop="5dp"
                style="@style/text_view_custom"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/star"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star"
                    />
                <TextView
                    android:id="@+id/rating"
                    style="@style/text_view_custom"
                    android:layout_toEndOf="@id/star"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/rating"
                    />
                <TextView
                    style="@style/text_view_custom"
                    android:layout_toEndOf="@id/rating"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/outof10"
                    />
            </RelativeLayout>

        </LinearLayout>

</LinearLayout>